Update pom.xml
Fixing bugs