@@ -6,7 +6,7 @@
 
     <groupId>groupId</groupId>
     <artifactId>CucumberBasics</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>3.8.1</version>
     <properties>
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
@@ -18,8 +18,12 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.7.0</version>
                 <configuration>
-                    <source>10</source>
-                    <target>10</target>
+                    <source>11</source>
+                    <target>11</target>
+		    <compilerArgs>
+                    	<arg>--add-exports</arg>
+                    	<arg>jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
+                    </compilerArgs>
                 </configuration>
             </plugin>
             <plugin>
